main/default/objects/Folder_Hierarchy__c/Folder_Hierarchy__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Folder Hierarchy custom setting for SharePoint</description>
    <label>Folder Hierarchy</label>
</CustomObject>