main/default/objects/Folder_Hierarchy__c/fields/Additional_Column_for_SharePoint__c.field-meta.xml
<CustomField>
    <fullName>Additional_Column_for_SharePoint__c</fullName>
    <label>Additional Column for SharePoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>