main/default/objects/Folder_Hierarchy__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>